Closed Bug 1843829 Opened 2 years ago Closed 1 years ago

gfx/harfbuzz/src/hb-algs.hh:319:29: error: possible misuse of comma operator here [-Werror,-Wcomma]

Categories

(Core :: Graphics: Text, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox115 --- unaffected
firefox116 --- unaffected
firefox117 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(2 files)

Likely triggered by sccache-dist as bug 1780461 and bug 1779200

Set release status flags based on info from the regressing bug 1842425

:jfkthame, since you are the author of the regressor, bug 1842425, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Could you file this upstream at https://github.com/harfbuzz/harfbuzz/issues, so that it gets fixed there? Thanks!

Flags: needinfo?(jfkthame) → needinfo?(lissyx+mozillians)

(In reply to Jonathan Kew [:jfkthame] from comment #3)

Could you file this upstream at https://github.com/harfbuzz/harfbuzz/issues, so that it gets fixed there? Thanks!

Of course, but can you give me your opinion on the WIP I have ?

Flags: needinfo?(lissyx+mozillians) → needinfo?(jfkthame)

I'm not really clear why this would fix the warning; at least when -Wcomma was created, it looks like compound assignments were supposed to be allowed on the LHS, so this usage ought to have been accepted as-is. But maybe the heuristics have been updated since the original implementation; I haven't looked further into it.

Anyhow, this looks similar to previous fixes for the same warning, so should be fine AFAICS.

Flags: needinfo?(jfkthame)
Assignee: nobody → lissyx+mozillians
Attachment #9344153 - Attachment description: WIP: Bug 1843829 - Silence new Wcomma error after HarfBuzz update to 8.0.0 → Bug 1843829 - Silence new Wcomma error after HarfBuzz update to 8.0.0 r?jfkthame!
Status: NEW → ASSIGNED

Not sure if upstream fixed the same way or picked my changes, but they just fixed it :)

Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a15a30a2c859 Silence new Wcomma error after HarfBuzz update to 8.0.0 r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch

With update to 8.0.1 this has regressed again with the same patch required

Status: RESOLVED → REOPENED
Regressed by: 1842991
Resolution: FIXED → ---
Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/06780b0e2840 Silence new Wcomma error after HarfBuzz update to 8.0.1 r=jfkthame
Status: REOPENED → RESOLVED
Closed: 2 years ago1 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: