Bug 1843829 - Silence new Wcomma error after HarfBuzz update to 8.0.1 r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D184672